Bug 147766 - Table is broken in PPTX -> ODP
Summary: Table is broken in PPTX -> ODP
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Gülşah Köse
URL:
Whiteboard: target:7.4.0 target:7.3.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-03-04 16:13 UTC by Regina Henschel
Modified: 2022-04-13 16:14 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Visual comparison saving PPTX as ODP (left) vs original PPTX (77.26 KB, image/png)
2022-03-04 16:44 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2022-03-04 16:13:45 UTC
Open attachment 164378 [details] from bug 135843.
Save the file as .odp
Reopen the saved file.

Error: The table is totally wrong rendered. The content is not visible.

Prior to the fix for bug 135843, there are some borders wrong, but cell background and content were OK.

I see the error in Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 58f2c1e6ab3052e0746dabb36e6061125779b034
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL

It was OK in Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 48b3894f74679a1624a92aabaabed29b90ef60cf
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL
Comment 1 Gerald Pfeifer 2022-03-04 16:44:00 UTC
Created attachment 178657 [details]
Visual comparison saving PPTX as ODP (left) vs original PPTX

Confirmed with today's -dev build

  Version: 7.4.0.0.alpha0+ / LibreOffice Community
  Build ID: 2b924f0d83ce63882e7d14a2b51cc645c2532920
  CPU threads: 8; OS: Linux 5.16; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

A visual comparison (attached) shows the the ODP export is completely
broken.
Comment 2 Xisco Faulí 2022-03-07 12:46:44 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=3faf005a367cbd28077403bf93810bbaf4805851

author	Gülşah Köse <gulsah.kose@collabora.com>	2022-02-01 16:03:14 +0300
committer	Gülşah Köse <gulsah.kose@collabora.com>	2022-03-02 11:57:25 +0100
commit 3faf005a367cbd28077403bf93810bbaf4805851 (patch)
tree 2fcee7f03bc52dfc6dbcafac55c77822c5da2b19
parent e8a004d54dc939b257b2851a78c324269e2a3973 (diff)
tdf#135843 Implement inside horizontal vertical borders.

Bisected with: bibisect-linux64-7.4

Adding Cc: to Gülşah Köse
Comment 3 Xisco Faulí 2022-03-07 15:26:07 UTC
This issue is master only, since I reverted the backport in libreoffice-7-3 branch < 
https://git.libreoffice.org/core/commit/ea5a3e0247b1230c1fe7e2cb0afc597e56d0b4c2 >
Comment 4 Commit Notification 2022-03-17 07:06:19 UTC
Gülşah Köse committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f8ac4be066b9277cf2f893b581adc33de841bb9e

tdf#147766 Export empty lines as line with noFill

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-04-13 06:27:34 UTC
Gülşah Köse committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/6bf805ffb62a13f2f44a26f47f732f05c954ef49

tdf#147766 Export empty lines as line with noFill

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Gerald Pfeifer 2022-04-13 16:14:58 UTC
Verifying as fixed with

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: a98971ac975e19efa2336b608506eefa85ce2485
CPU threads: 8; OS: Linux 5.17; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded